5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1585_2905.log
== TEST (2019-03-28 11:13:05) 
-- CODE:
# Teste seu codigo aos poucos.
from math import
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
a = float(input())
b = float(input())
c = float(input())
s = (a+b+c)/2


# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
print(round(sqrt(s*(s-a)*(s-b)*(s-c)), 5))
-- ERROR:
File "XXXX", line 2
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:14:31) 
-- CODE:
# Teste seu codigo aos poucos.
from math import*
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
a = float(input())
b = float(input())
c = float(input())
s = (a+b+c)/2


# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
print(round(sqrt(s*(s-a)*(s-b)*(s-c)), 5))
-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:14:51) 
-- CODE:
# Teste seu codigo aos poucos.
from math import*
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
a = float(input())
b = float(input())
c = float(input())
s = (a+b+c)/2


# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
print(round(sqrt(s*(s-a)*(s-b)*(s-c)), 5))
-- EXECUTION TIME:
0.129508
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
